# Projet2_CA

./: README.md
Projet_CAM/: dune-project
Projet_CAM/CAM_Plat/: dune
Projet_CAM/Resultat_CAM/: test01.txt  test02.txt  test03.txt  test04.txt  test05.txt  test06.txt  test07.txt  test08.txt  test09.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test16.txt  test17.txt  test18.txt  test19.txt
Projet_CAM/Resultat_CAM_plat/: test02.ecl  test03.ecl  test04.ecl  test05.ecl  test07.ecl  test08.ecl  test09.ecl  test10.ecl  test11.ecl  test12.ecl  test13.ecl  test14.ecl  test15.ecl  test16.ecl  test17.ecl  test18.ecl  test19.ecl
Projet_CAM/Samples/: test03.ml  test04.ml  test05.ml  test06.ml  test08.ml  test09.ml  test14.ml  test15.ml  test17.ml  test18.ml
Projet_CAM/Test_CAM/: dune  test_runner.ml  test_runner_CAM.ml
Projet_CAM/Test_CAM/Samples/: identity.ml  test01.ecl  test02.ml  test06.ecl  test06.ml  test07.ecl  test07.ml  test10.ecl  test10.ml  test11.ecl  test11.ml  test12.ml  test13.ml  test16.ml  test19.ml
Projet_CAM/Test_CAM_Plat/: dune  test_runner_CAM_plat.ml
Projet_CAM/Transformation_MiniML_CAM/: ast.ml  dune  lexer.mll  parser.mly  transformation.ml
Projet_CAM/VM_CAM/: dune  vm.ml
Projet_CAM/_build/: .db  .digest-db  log
Projet_CAM/_build/default/: META.Projet_CAM  Projet_CAM.dune-package  Projet_CAM.install
Projet_CAM/eclat-run/: code.ecl  main.ecl
Projet_CAM/eclat/eclat-compiler/: code.ecl  main.ecl
Projet_CAM/lib/: dune
Projet_CAM/test/: dune
partie1/: ast.ml  transformation.ml
(+298 files in other folders)
