(executable
 (public_name TransformationMLCAM)
 (name transformation)
 (modules ast lexer analyseur transformation )
 (libraries Projet_CAM))

(rule
  (targets lexer.ml)
  (deps lexer.mll)
  (action (run ocamllex %{deps})))

(rule
  (targets analyseur.ml analyseur.mli)
  (deps analyseur.mly)
  (action (run ocamlyacc %{deps})))
