(library
 (name transformation_ml_cam)
 (public_name Projet_CAM.transformation-ml-cam)
 (modules ast parser lexer  transformation)
 (libraries Projet_CAM))

(rule
  (targets lexer.ml)
  (deps lexer.mll)
  (action (run ocamllex %{deps})))

(rule
  (targets parser.ml parser.mli)
  (deps parser.mly)
  (action (run ocamlyacc %{deps})))